# intellectual_property

./: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  log_config.py  main.py
app/api/authors/: dependencies.py  routes.py
app/api/books/: dependencies.py  routes.py
app/api/borrows/: dependencies.py  routes.py
app/database/: db.py
app/models/: author_model.py  base.py  book_model.py  borrow_model.py
app/repository/: author_repository.py  base_repository.py  book_repository.py  borrow_repository.py  repository_errors.py
app/schemas/: author_schema.py  book_schema.py  borrow_schema.py
app/services/: author_service.py  base_service.py  book_service.py  borrow_service.py
tests/: Dockerfile  conftest.py  factories.py  test_endpoint.py  while.py
tests/integration_tests/: author_test.py
tests/unit_tests/: mock_services.py  mok_fixtures.py
tests/unit_tests/api_tests/: test_author_endpoint.py
