[tool.poetry]
name = "library-management"
version = "0.1.0"
description = ""
authors = ["Andrey Lopanchuk <dred2spb79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
orjson = "^3.10.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"
faker = "^33.1.0"
factory-boy = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", ]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
